# arcium-auction

./: Anchor.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
programs/auction/: Cargo.toml
programs/auction/src/: lib.rs
src/: App.jsx  index.css
src/components/: AuctionCard.jsx  AuctionCreator.jsx  AuctionList.jsx  BidSubmission.jsx  CountdownTimer.jsx  WalletConnect.jsx  WinnerReveal.jsx
src/utils/: anchorClient.js  arciumEncryption.js  helpers.js  programInstructions.js  solanaConnection.js
