[package]
name = "auction"
version = "0.1.0"
description = "Blind auction with Arcium MPC encryption"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "auction"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
borsh = "0.10.3"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }